--- a/views/index.html
+++ b/views/index.html
@@ -13,10 +13,21 @@
     <hr>
     <div>
         <code>
-
+            POST [..]/api/translate
         </code>
     </div>
+    <hr>
     <div>
+        <form action="/" method="POST" id="form">
+            <input type="radio" name="locale" value="american-to-british" checked> american-to-british
+            <input type="radio" name="locale" value="british-to-american"> british-to-american
+            <br> <br>
+            <textarea name="text" cols="50" rows="5"></textarea>
+            <br> <br>
+            <input type="submit" value="Translate">
+        </form>
+    </div>
+    <div id="output">
 
     </div>
 
